# rust-analyzer

./: Cargo.toml
crates/codegen/: Cargo.toml
crates/codegen/src/: drop.rs  lib.rs  pointer.rs  test_db.rs  tests.rs
crates/hir-def/src/: lang_item.rs
crates/hir-def/src/hir/: generics.rs
crates/hir-ty/: Cargo.toml
crates/hir-ty/src/: autoderef.rs  chalk_ext.rs  consteval.rs  consteval_nextsolver.rs  db.rs  drop.rs  dyn_compatibility.rs  generics.rs  infer.rs  layout.rs  layout_nextsolver.rs  lib.rs  lower.rs  lower_nextsolver.rs  method_resolution.rs  mir.rs  next_solver.rs  tests.rs  traits.rs
crates/hir-ty/src/consteval/: tests.rs
crates/hir-ty/src/infer/: closure.rs  coerce.rs  expr.rs  unify.rs
crates/hir-ty/src/layout/: adt.rs  tests.rs
crates/hir-ty/src/layout_nextsolver/: adt.rs
crates/hir-ty/src/lower_nextsolver/: path.rs
crates/hir-ty/src/mir/: borrowck.rs  dataflow.rs  eval.rs  lower.rs  pretty.rs
crates/hir-ty/src/next_solver/: abi.rs  consts.rs  def_id.rs  fold.rs  generic_arg.rs  generics.rs  infer.rs  interner.rs  ir_print.rs  lifetime.rs  mapping.rs  opaques.rs  predicate.rs  region.rs  solver.rs  ty.rs  util.rs  walk.rs
crates/hir-ty/src/tests/: closure_captures.rs  coercion.rs  method_resolution.rs  patterns.rs  regression.rs  simple.rs  traits.rs
crates/hir/src/: code_model.rs  lib.rs  semantics.rs
crates/hir_def/src/: path.rs  resolver.rs
crates/hir_ty/: Cargo.toml
crates/hir_ty/src/: db.rs  hir.rs  infer.rs  lib.rs  lower.rs  method_resolution.rs  tests.rs  utils.rs
crates/hir_ty/src/hir/: lower.rs
crates/hir_ty/src/infer/: expr.rs  instantiate.rs  path.rs
crates/hir_ty/src/traits/: chalk.rs
crates/ide/src/: hover.rs
crates/ide_db/src/: apply_change.rs
crates/intern/src/symbol/: symbols.rs
crates/ra_hir_ty/: Cargo.toml
crates/ra_hir_ty/src/: hir.rs  tests.rs
crates/test-utils/src/: minicore.rs
(+39 files in other folders)
