[package]
name = "codegen"
version = "0.0.0"
repository.workspace = true

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
la-arena.workspace = true
base-db.workspace = true
cranelift.workspace = true
cranelift-module.workspace = true
cranelift-jit.workspace = true
cranelift-native.workspace = true
hir-def.workspace = true
hir-expand.workspace = true
hir-ty.workspace = true
syntax.workspace = true
rustc-hash.workspace = true
span.workspace = true
triomphe.workspace = true
smallvec.workspace = true
either.workspace = true
salsa.workspace = true

anyhow.workspace = true # FIXME

ra-ap-rustc_abi.workspace = true
ra-ap-rustc_index.workspace = true
# ra-ap-rustc_pattern_analysis.workspace = true
ra-ap-rustc_ast_ir.workspace = true
ra-ap-rustc_type_ir.workspace = true
# ra-ap-rustc_next_trait_solver.workspace = true


[dev-dependencies]
test-utils.workspace = true
test-fixture.workspace = true
